# bible-build-aarch64

./: .env  .gitmodules  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  QtCreatorDeployment.txt  README.md  bible.desktop  bible.pri  bible.pro  bitbucket-pipelines.yml  cmake_install.cmake  conf.pri  coverage.sh  docker-compose.yml  install_manifest.txt  qrc_qml.cpp
RPMS/: bible-0.1-1.aarch64.rpm
curl-7.74.0/: Makefile  config.status  libcurl.pc  libtool
curl-7.74.0/docs/: Makefile
curl-7.74.0/docs/cmdline-opts/: Makefile
curl-7.74.0/docs/examples/: Makefile
curl-7.74.0/docs/libcurl/: Makefile
curl-7.74.0/include/: Makefile
curl-7.74.0/include/curl/: Makefile
curl-7.74.0/lib/: curl_config.h  libcurl.la
curl-7.74.0/lib/.deps/: curl-curl_ctype.Po  curl-curl_multibyte.Po  curl-dynbuf.Po  curl-nonblock.Po  curl-strtoofft.Po  curl-version_win32.Po  curl-warnless.Po  libcurl_la-altsvc.Plo  libcurl_la-amigaos.Plo  libcurl_la-asyn-ares.Plo  libcurl_la-asyn-thread.Plo  libcurl_la-base64.Plo  libcurl_la-conncache.Plo  libcurl_la-connect.Plo  libcurl_la-content_encoding.Plo  libcurl_la-cookie.Plo  libcurl_la-curl_addrinfo.Plo  libcurl_la-curl_ctype.Plo  libcurl_la-curl_des.Plo  libcurl_la-curl_endian.Plo  libcurl_la-curl_fnmatch.Plo  libcurl_la-curl_get_line.Plo  libcurl_la-curl_gethostname.Plo  libcurl_la-curl_gssapi.Plo  libcurl_la-curl_memrchr.Plo  libcurl_la-curl_multibyte.Plo  libcurl_la-curl_ntlm_core.Plo  libcurl_la-curl_ntlm_wb.Plo  libcurl_la-curl_path.Plo  libcurl_la-curl_range.Plo  libcurl_la-curl_rtmp.Plo  libcurl_la-curl_sasl.Plo  libcurl_la-curl_sspi.Plo  libcurl_la-curl_threads.Plo  libcurl_la-dict.Plo  libcurl_la-doh.Plo  libcurl_la-dotdot.Plo  libcurl_la-dynbuf.Plo  libcurl_la-easy.Plo  libcurl_la-easygetopt.Plo  (+84 more)
curl-7.74.0/lib/.libs/: libcurl.lai
curl-7.74.0/scripts/: Makefile
curl-7.74.0/src/: Makefile
curl-7.74.0/tests/: Makefile  configurehelp.pm
qml/: bible.qml  qml.qrc
qml/components/: ExpandingSectionBooks.qml  ExpandingSectionGroupPatch.qml  ExpandingSectionPatch.qml  FlippingLabelPatch.qml  GlassItemLeft.qml
qml/pages/: BooksPage.qml  CommentsPage.qml  History.qml  Main.qml  ModuleInformation.qml  ModulesPage.qml  Pages.qml  VersesListView.qml
rpm/: bible.changes.in  bible.changes.run.in  bible.spec  bible.spec.10672  bible.yaml
src/: CMakeLists.txt  LocaleDesc.cpp  LocaleDesc.h  Makefile  bible.cpp  cmake_install.cmake  databasemanager.h  host.cpp  host.h  modulesgroupsform.cpp  modulesgroupsform.h  src.pro  userdb.cpp  userdb.h
src/core/: CMakeLists.txt  cmake_install.cmake  core.pri  core.pro
src/core/include/: dereferenceiterator.h  global.h  invaliddata.h  locallanguage.h
src/core/src/: locallanguage.cpp
src/dbmanager/: CMakeLists.txt  cmake_install.cmake
src/dbmanager/include/: binding.h  db.h
src/dbmanager/src/: db.cpp
src/modules/: CMakeLists.txt  Makefile  cmake_install.cmake
src/modules/include/: booksmodel.h  commentsmodel.h  dbmanager.h  groupmodules.h  historymodel.h  host.h  hostmodel.h  managergroup.h  managerregistry.h  modelgroupmodules.h  modelhost.h  modelmodule.h  modelregistry.h  modelupdate.h  module.h  moduledownload.h  qsortfiltersqlquerymodel.h  registry.h  versesmodel.h
src/modules/modules_autogen/: mocs_compilation.cpp
src/modules/modules_autogen/6YEA5652QU/: moc_booksmodel.cpp  moc_commentsmodel.cpp  moc_historymodel.cpp  moc_managergroup.cpp  moc_managerregistry.cpp  moc_modelgroupmodules.cpp  moc_modelhost.cpp  moc_modelmodule.cpp  moc_modelregistry.cpp  moc_modelupdate.cpp  moc_moduledownload.cpp  moc_qsortfiltersqlquerymodel.cpp  moc_versesmodel.cpp
src/modules/src/: booksmodel.cpp  commentsmodel.cpp  dbmanager.cpp  groupmodules.cpp  historymodel.cpp  host.cpp  hostmodel.cpp  managergroup.cpp  managerregistry.cpp  modelgroupmodules.cpp  modelhost.cpp  modelmodule.cpp  modelregistry.cpp  modelupdate.cpp  module.cpp  moduledownload.cpp  qsortfiltersqlquerymodel.cpp  registry.cpp  versesmodel.cpp
src/netmanager/: CMakeLists.txt  Makefile  cmake_install.cmake
src/netmanager/include/: curleasy.h  curlmulti.h  downloadmanager.h  netmanager_global.h  quickdownload.h  textprogressbar.h
src/netmanager/netmanager_autogen/: mocs_compilation.cpp
src/netmanager/netmanager_autogen/6YEA5652QU/: moc_curleasy.cpp  moc_curlmulti.cpp  moc_downloadmanager.cpp  moc_quickdownload.cpp
src/netmanager/src/: curleasy.cpp  curlmulti.cpp  downloadmanager.cpp  quickdownload.cpp  textprogressbar.cpp
src/network/: downloadmanager.cpp  downloadmanager.h  network.pri  network.pro  textprogressbar.cpp  textprogressbar.h
tests/: CMakeLists.txt.in  codecov.yml
tests/integration/: CMakeLists.txt  integration.pro
tests/integration/base_test/: CMakeLists.txt
tests/integration/base_test/include/: basetest.h  entitybase.h  modeljsontest.h
tests/integration/base_test/src/: basetest.cpp  entitybase.cpp  modeljsontest.cpp
tests/integration/modules/: CMakeLists.txt  tst_groupmodules.cpp  tst_groupmodules.h  tst_host.cpp  tst_host.h  tst_managergroup.cpp  tst_managergroup.h  tst_managerregistry.cpp  tst_managerregistry.h  tst_modelgroupmodules.cpp  tst_modelgroupmodules.h  tst_modelhost.cpp  tst_modelhost.h  tst_modelmodule.cpp  tst_modelmodule.h  tst_modelregistry.cpp  tst_modelregistry.h  tst_module.cpp  tst_module.h  tst_registry.cpp  tst_registry.h
tests/integration/modules/main/: tst_groupmodules.cpp  tst_host.cpp  tst_managergroup.cpp  tst_managerregistry.cpp  tst_modelgroupmodules.cpp  tst_modelhost.cpp  tst_modelmodule.cpp  tst_modelregistry.cpp  tst_module.cpp  tst_registry.cpp
tests/integration/netmanager/: CMakeLists.txt  tst_downloadmanager.cpp  tst_quickdownload.cpp
tests/quazip/: JlCompress.h  quazip.h
translations/: bible-de.ts  bible-ru.ts  bible.ts
unittests/: downloadmanager-test.cpp  gtest_global.h  mock_downloadmanager.h  mock_modulesgroupmodel.h  mock_modulesmodel.h  mock_textprogressbar.h  modulesgroupmodel-test.cpp  modulesmodel-test.cpp  textprogressbar-test.cpp  unittests.pro
unittests/scripts/: post_unit_tests.sh  pre_unit_tests.sh  runCoverage.sh
(+86 files in other folders)
